Update selector to a class to prevent overlap with past tweets section

--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,4 +1,4 @@
-header {
+.profile {
   height: 400px;
   background-image:url('../images/az-subtle.png');
   background-color: gold;
